[package]
name = "log_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27"
tracing = "0.1"
lazy_static = "1.4"
chrono = "0.4"
